third_party/WebKit/Source/core/css/properties/longhands/JustifyContentCustom.cpp
@@ -15,6 +15,11 @@ const CSSValue* JustifyContent::ParseSingleValue(
     CSSParserTokenRange& range,
     const CSSParserContext& context,
     const CSSParserLocalContext&) const {
+  // justify-content property does not allow the <baseline-position> values.
+  if (CSSPropertyParserHelpers::IdentMatches<CSSValueFirst, CSSValueLast,
+                                             CSSValueBaseline>(
+          range.Peek().Id()))
+    return nullptr;
   return CSSParsingUtils::ConsumeContentDistributionOverflowPosition(
       range, CSSParsingUtils::IsContentPositionOrLeftOrRightKeyword);
 }
